--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
         android:label="Delta Diet"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".CustomEntry" />
-        <activity android:name=".InitialSetup"></activity>
+        <activity android:name=".InitialSetup" />
+        <activity android:name=".AddEntry"></activity>
     </application>
 
 </manifest>
