--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".CustomEntry" />
         <activity android:name=".InitialSetup" />
-        <activity android:name=".AddEntry"></activity>
+        <activity android:name=".AddEntry" />
+        <activity android:name=".Achievements"></activity>
     </application>
 
 </manifest>
